Ensure that there is a background behind header

--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,16 @@ body {
     color: var(--peach);
 }
 
+#header, .email-form {
+    background: linear-gradient(
+        90deg,
+        black,
+        var(--blue)
+    );
+}
+
 #header {
     display: flex;
-    background-color: rgba(255, 255, 255, 0.75);
 }
 
 .logo, #nav-bar {
@@ -42,7 +49,7 @@ body {
 
 .logo {
     font-size: 1.5rem;
-    margin-left: 3%;
+    background-color: rgba(255,255,255,0.85);
 }
 
 #nav-bar {
@@ -67,11 +74,6 @@ a:visited {
 }
 
 .email-form {
-    background: linear-gradient(
-        90deg,
-        black,
-        var(--blue)
-    );
     display: flex;
     flex-direction: column;
     place-items: center;
